# easy-to-give-then-receive

./: .gitignore  LICENSE  README.md  THIRDPARTY.txt
demo/: index.js  package-lock.json  package.json
demo/public/styles/: main.css
demo/public/styles/css/: custom.css  custom.css.map
demo/scss/: custom.scss
demo/views/: index.ejs
demo/views/partials/: footer.ejs  header.ejs
demoagents/: README.md  package-lock.json  package.json  pyproject.toml
demoagents/src/demoagents/: crew.py  main.py
demoapp/: .gitattributes  app.js  package-lock.json  package.json  tsconfig.json
demoapp/public/stylesheets/: styles.css  styles.css.map
demoapp/routes/: index.js
demoapp/views/: index.ejs
demoapp/views/partials/: chat.ejs  footer.ejs  header.ejs
docs/: index.html
docs/css/: custom.css  custom.css.map
docs/scss/: custom.scss
extensions/local-multi-agent/: local-multi-agent.py  requirements.txt
extensions/watsonx-assistant-etgtr-sdg/: etgtr-sdg-openapi.json
