[tool.poetry]
name = "demoagents"
version = "0.1.0"
description = "demoagents using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.63.2,<1.0.0" }


[tool.poetry.scripts]
demoagents = "demoagents.main:run"
run_crew = "demoagents.main:run"
train = "demoagents.main:train"
replay = "demoagents.main:replay"
test = "demoagents.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
